[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scripts/jobs/mopFloor.gd" type="Script" id=1]
[ext_resource path="res://assets/jobs/mopFloor/background.png" type="Texture" id=2]
[ext_resource path="res://assets/jobs/washWindows/dirt.png" type="Texture" id=3]
[ext_resource path="res://assets/jobs/mopFloor/mop.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 107, 106 )

[node name="CircuitBreakers" type="TextureRect"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 2 )
stretch_mode = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 213.0
margin_top = 74.0
margin_right = 426.0
margin_bottom = 286.0
texture = ExtResource( 3 )
expand = true

[node name="Area2D" type="Area2D" parent="TextureRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/Area2D"]
position = Vector2( 107, 106 )
shape = SubResource( 1 )

[node name="TextureButton2" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 64.0
margin_top = 148.0
margin_right = 320.0
margin_bottom = 404.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 64.0
margin_top = 148.0
margin_right = 320.0
margin_bottom = 404.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="TextureButton"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TextureButton/Area2D"]
polygon = PoolVector2Array( 48, 164, 80, 164, 248, 0, 256, 0, 256, 12, 92, 176, 96, 188, 96, 208, 92, 220, 88, 228, 84, 232, 80, 236, 72, 240, 60, 244, 48, 248, 44, 252, 36, 256, 0, 256, 0, 252, 4, 248, 12, 244, 16, 236, 20, 232, 24, 224, 28, 208, 32, 184, 36, 176, 40, 172 )

[connection signal="area_entered" from="TextureRect/Area2D" to="." method="_sponge_entered"]
[connection signal="area_exited" from="TextureRect/Area2D" to="." method="_sponge_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_sponge_down"]
[connection signal="button_up" from="TextureButton" to="." method="_sponge_up"]
